Bug 126826 - Press Undo Spell Checking dialog has no effect in document
Summary: Press Undo Spell Checking dialog has no effect in document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.3.0.4 release
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: Spell-Checking Undo-Redo
  Show dependency treegraph
 
Reported: 2019-08-11 16:13 UTC by Telesto
Modified: 2025-09-28 01:38 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (9.24 KB, application/vnd.oasis.opendocument.text)
2019-08-11 16:16 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2019-08-11 16:13:31 UTC
Description:
Press Undo Spell Checking dialog has no effect in document

Steps to Reproduce:
1. Open the attached file
2. Press F7
3. Press correct
4. Press Undo -> Coulor reappears
5. Press Close. Still corrected word "Color"

Actual Results:
* Undo resets the spelling to 'coulor' but has no effect in document
* Undo has no effect on the suggestion list (disabled)

Expected Results:
The big question what Undo supposed to do in this case. This situation was not possible in LibreOffice 4.4.7.2. The spell dialog would close after finishing (which was great IMHO). Current situation is better, but what to do with Undo?


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.3.0.4 (x86)
Build ID: 057fc023c990d676a43019934386b85b21a9ee99
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL
Comment 1 Telesto 2019-08-11 16:16:10 UTC
Adding NeedUXEval as I'm not sure what should happen here
Comment 2 Telesto 2019-08-11 16:16:42 UTC
Created attachment 153297 [details]
Example file
Comment 3 Jean-Baptiste Faure 2019-08-11 17:04:10 UTC
I reproduce the described behavior but I do not know if it is a bug.
That said it is a bit confusing that the suggestion list is disabled without any mean to re-enable it without closing it.
Perhaps the undo button should close the spellcheck dialog.

Best regards. JBF
Comment 4 Heiko Tietze 2019-08-12 08:00:50 UTC
Clearly a bug to me. You can undo outside the dialog and the button offers this operation inside, and it seems to work but only for the preview. We could remove the undo button/function, on the other hand.
Comment 5 QA Administrators 2022-08-24 03:44:59 UTC Comment hidden (noise)
Comment 6 QA Administrators 2024-08-24 03:15:54 UTC Comment hidden (noise)
Comment 7 Commit Notification 2025-09-28 01:38:55 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/79a2db2d0dc767eff69e286af30efe05efdc0c5f

tdf#126826 cui SpellDialog: markNexterror - disable Undo button

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.