tdf#126826 cui SpellDialog: markNexterror - disable Undo button

Change-Id: Ie0ca4a368672c30e089f33c322f30eed5783785e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191575
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>